<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">大公鸡</string>
    <string name="main_conversation">会话</string>
    <string name="main_group">广场</string>
    <string name="main_chatroom">通讯录</string>
    <string name="main_customer">意见反馈</string>
    <string name="main_customer_xn">小能客服</string>
    <string name="private_chat">发起聊天</string>
    <string name="group_chat">创建群组</string>
    <string name="add_contacts">添加好友</string>
    <string name="add_select_group">创建群组</string>
    <string name="set_personal_information">我的账号</string>
    <string name="set_news_reminded">新消息提醒</string>
    <string name="set_privacy">隐私</string>
    <string name="set_set">设置</string>
    <string name="set_rongcloud">关于 XChat</string>
    <string name="set_logout">注销</string>
    <string name="de_save">"保存"</string>
    <string name="no_read_message">"···"</string>
    <string name="net_error">网络异常</string>
    <string name="login_success">"登录成功"</string>
    <string name="login_code">重新获取</string>
    <string name="login_code1">后重发</string>
    <string name="login_qq_cliend">未安装QQ客户端</string>
    <string name="login_wx_cliend">未安装微信客户端</string>
    <string name="upload_success">上传成功</string>
    <string name="new_message_notice">开启消息免打扰</string>
    <string name="new_message_show">新消息通知</string>
    <string name="new_message_voice">声音</string>
    <string name="new_message_vibration">震动</string>
    <string name="new_message_prompt_voice">新消息提示音</string>
    <string name="new_message_follow_system">跟随系统</string>
    <string name="friend_confirmation">加我好友时需要验证</string>
    <string name="the_blacklist">黑名单</string>
    <string name="join_the_blacklist">加入黑名单</string>
    <string name="blacklist_empty">黑名单为空</string>
    <string name="portrait">头像</string>
    <string name="my_username">昵称</string>
    <string name="update_log">更新日志</string>
    <string name="function_introduce">功能介绍</string>
    <string name="dv_document">开发者文档</string>
    <string name="rongcloud_web">官方网站</string>
    <string name="new_version_update">当前版本</string>
    <string name="de_notification_start">开始时间</string>
    <string name="de_notification_start_title">开始时间：</string>
    <string name="bug_time">购买时间：</string>
    <string name="de_notification_end">结束时间</string>
    <string name="de_notification_end_title">结束时间：</string>
    <string name="de_item_delete_friend">删除</string>
    <string name="de_actionbar_myacc">个人账号</string>
    <string name="de_actionbar_sub_group">群组</string>
    <string name="de_actionbar_sub_private">我的私人会话</string>
    <string name="de_actionbar_sub_discussion">我的讨论组</string>
    <string name="de_actionbar_sub_system">系统消息</string>
    <string name="de_actionbar_sub_defult">聊天</string>
    <string name="de_actionbar_set_public">公众号</string>
    <string name="de_actionbar_system">系统消息</string>
    <string name="de_dialog_item_message_delete">删除消息</string>
    <string name="de_dialog_item_message_copy">复制</string>
    <string name="de_notification_information">开启后，在设定时间段内收到新消息时不会响铃或振动。</string>
    <string name="de_group_list_default_discussion_name">讨论组</string>
    <string name="de_message_content_draft">[草稿]</string>
    <string name="de_message_at_me">[有人@我]</string>
    <string name="start_chat">发起会话</string>
    <string name="login_api_fail">登录请求接口失败</string>
    <string name="sync_userinfo_api_fail">同步用户信息接口请求失败</string>
    <string name="get_token_api_fail">获取token请求接口失败</string>
    <string name="sync_group_api_fail">同步群组信息请求接口失败</string>
    <string name="phone_or_psw_error">手机或者密码错误</string>
    <string name="phone_number_is_null">手机号不能为空</string>
    <string name="Illegal_phone_number">非法手机号</string>
    <string name="password_is_null">验证码不能为空</string>
    <string name="invitecode_is_null">邀请码不能为空</string>
    <string name="password_cannot_contain_spaces">验证码不能包含空格</string>
    <string name="phone_number_available">手机号可用</string>
    <string name="phone_number_has_been_registered">手机号已被注册</string>
    <string name="messge_send">短信已发出,请注意查收</string>
    <string name="message_frequency">短信发送频率超限</string>
    <string name="captcha_overdue">验证码过期,请重新请求</string>
    <string name="verification_code_error">验证码错误</string>
    <string name="register_success">注册成功</string>
    <string name="forgot_password">找回密码</string>
    <string name="new_user">新用户</string>
    <string name="Login">登录</string>
    <string name="bindphone1">绑定手机号</string>
    <string name="bindphonesubmit">提交</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="nickname">昵称</string>
    <string name="code">短信验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="register">注册</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm">确认</string>
    <string name="forget_password">忘记密码</string>
    <string name="cancel">取消</string>
    <string name="Done">完成</string>
    <string name="exit_app">确定退出应用?</string>
    <string name="No_friends">暂无好友</string>
    <string name="Search">搜索</string>
    <string name="new_friends">新的朋友</string>
    <string name="group">群组</string>
    <string name="public_service">公众号</string>
    <string name="chatroom">聊天室</string>
    <string name="groups">群聊</string>
    <string name="chatroom1">聊天室 I</string>
    <string name="add_success">加入成功</string>
    <string name="not_group_members">非群组成员不能查看群组详情</string>
    <string name="check_network">请检查网络</string>
    <string name="chatroom2">聊天室 II</string>
    <string name="chatroom3">聊天室 III</string>
    <string name="chatroom4">聊天室 IV</string>
    <string name="agreed_friend">已同意好友关系</string>
    <string name="agree">接&#160;&#160;&#160;受</string>
    <string name="request">已请求</string>
    <string name="ignore">已忽略</string>
    <string name="added">已添加</string>
    <string name="deleted">已删除</string>
    <string name="mobile_phone">手机号</string>
    <string name="change_password">密码修改</string>
    <string name="select_group_member">选择群组成员</string>
    <string name="remove_group_member">移除群组成员</string>
    <string name="add_group_member">添加群组成员</string>
    <string name="edit_group_name">填写群名称(2-10字)</string>
    <string name="create_group">创建群组</string>
    <string name="created_group">创建了群组</string>
    <string name="you">你</string>
    <string name="request_friends">请求添加你为好友</string>
    <string name="edit_phone">请输入 11 位手机号</string>
    <string name="original_password">原密码不能为空</string>
    <string name="new_password_not_null">新密码不能为空</string>
    <string name="confirm_password_not_null">确认密码不能为空</string>
    <string name="original_password_mistake">原密码填写错误</string>
    <string name="passwords_invalid">密码必须为6-16位字符，区分大小写</string>
    <string name="passwords_do_not_match">填写的确认密码与新密码不一致</string>
    <string name="original_password_text">初始密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="group_info">群组信息</string>
    <string name="group_member_size">全部群成员</string>
    <string name="group_name">群名称</string>
    <string name="confirm_quit_group">确认退出群组?</string>
    <string name="confirm_dismiss_group">确认解散群组?</string>
    <string name="clean_history">是否清除会话聊天记录?</string>
    <string name="set_top">会话置顶</string>
    <string name="message_notice">消息免打扰</string>
    <string name="search_message">查找聊天记录</string>
    <string name="clean_message">清除聊天记录</string>
    <string name="send_message">发起聊天</string>
    <string name="quit_group">删除并退出</string>
    <string name="dismiss_group">解散并退出</string>
    <string name="user_details">用户详情</string>
    <string name="divided_string">、</string>
    <string name="change_group_name">修改群名称为</string>
    <string name="quit_groups">退出了群组</string>
    <string name="dismiss_groups">解散了群组</string>
    <string name="join_group">加入了群组</string>
    <string name="to_join_group">加入了群组</string>
    <string name="invitation">邀请</string>
    <string name="remove_group_before_str">将</string>
    <string name="remove_group_after_str">移出了群组</string>
    <string name="my_groups">群组</string>
    <string name="code_is_null">验证码为空</string>
    <string name="name_is_null">昵称不能为空</string>
    <string name="name_contain_spaces">昵称不能包含空格</string>
    <string name="remove_group_members">确认移除以下群成员?</string>
    <string name="add_successful">添加成功</string>
    <string name="remove_successful">移除成功</string>
    <string name="least_one_friend">至少选择一位好友</string>
    <string name="not_send_code">未向服务端获取验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="clear_success">清除成功</string>
    <string name="clear_failure">清除失败</string>
    <string name="change_group_info">更改群组信息</string>
    <string name="new_group_name">新的群名称</string>
    <string name="update_success">更改成功</string>
    <string name="quit_success">退出成功</string>
    <string name="dismiss_success">解散成功</string>
    <string name="group_name_not_is_null">群组昵称不能为空</string>
    <string name="group_name_size_is_one">群名称不少于2个字</string>
    <string name="create_group_success">群组创建成功</string>
    <string name="group_header_api_fail">群组头像接口请求失败</string>
    <string name="group_create_api_fail">群组创建接口请求失败</string>
    <string name="upload_portrait_failed">上传头像失败</string>
    <string name="phone_unregister">此号码未被注册</string>
    <string name="group_portrait">群头像</string>
    <string name="add_friend">加为好友</string>
    <string name="add_text">加好友信息...</string>
    <string name="request_success">请求成功</string>
    <string name="can_not_add_yourself">自己不能添加自己为好友</string>
    <string name="new_name">新昵称</string>
    <string name="portrait_update_success">头像更新成功</string>
    <string name="my_wallet">我的钱包</string>
    <string name="account_setting">账号设置</string>
    <string name="exit_login">退出登录</string>
    <string name="clear_cache">清除缓存</string>
    <string name="privacy">隐私</string>
    <string name="new_message">接收新消息通知</string>
    <string name="message_show_details">通知显示消息详情</string>
    <string name="mime_mianfei">免费</string>
    <string name="mime_close">已关闭接听</string>
    <string name="unsealing_input">300以内</string>
    <string name="vip_biaozhi">尊贵VIP标志</string>
    <string name="vip_sixin">私信聊天无限制</string>
    <string name="centee_foot_1">优惠说明</string>
    <string name="centee_foot_2">优惠期内，凡加入年费会员，系统将自动把你推荐给所有同城异性会员，VIP标志突出显示，彰显身份！让你人气飙升，掌握主动！</string>
    <string name="centee_foot_3">VIP尊享特权</string>
    <string name="reward_11">选 择 分 享 姿 势</string>
    <string name="reward_12">分享到微信/QQ/朋友圈</string>
    <string name="reward_13">保存二维码到相册</string>
    <string name="reward_14">复制链接到剪贴板</string>
    <string name="reward_15">若分享的链接在QQ、微信中无法打开，重新分享一次即可。</string>
    <string name="xy_1">温馨提示</string>
    <string name="xy_2">\t\t为了维护社区健康发展，为广大网友营造积极、健康的社区环境；社区将严打低俗涉黄、裸露、涉政等违规的内容。</string>
    <string name="xy_3">\t\t社区已接入鉴黄系统，自动识别图片或视频是否属于低俗或涉黄，进行实时删除拦截；同时我们后台工作人员也实时审核帖子内容，发现违规立即删除。</string>
    <string name="xy_4">\t\t社区成员须遵守《平台公约》，共同建设绿色健康的社区环境！</string>
    <string name="xy_5">\t\t欢迎来到社区大家庭，祝您生活愉快！</string>
    <string name="xy_6">同意</string>
    <string name="real_name">真实姓名</string>
    <string name="hint_input_real_name">请输入真实姓名</string>
    <string name="contact_phone">联系电话</string>
    <string name="hint_input_contact_phone">请输入联系电话</string>
    <string name="unsealing_reason">解封理由</string>
    <string name="hint_input_unsealing_seaon">请输入您的解封理由</string>
    <string name="upload_unsealing_pic">上传截图</string>
    <string name="confir_submit">确认提交</string>
    <string name="shoujianren">收件人</string>
    <string name="please_input_shoujianren_name">请输入收件人姓名</string>
    <string name="suozai_diqu">所在地区</string>
    <string name="detail_address">详细地址</string>
    <string name="please_detail_address">请输入详细地址</string>
    <string name="save_address">保存地址</string>
    <string name="please_suozai_diqu">请选择所在地区</string>
    <string name="shanchu_address">删除地址</string>
</resources>