<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="244dp"
        android:background="@drawable/bg_dialog_2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/reward_11"
            android:textColor="@color/textColor"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/dialog_reward_list2_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/live_btn_1"
            android:gravity="center"
            android:text="@string/reward_12"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/dialog_reward_list2_2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/live_btn_1"
            android:gravity="center"
            android:text="@string/reward_13"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/dialog_reward_list2_3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/live_btn_1"
            android:gravity="center"
            android:text="@string/reward_14"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/reward_15"
            android:textColor="@color/color_999999"
            android:textSize="12dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/dialog_reward_close"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/reward_close" />

</LinearLayout>