<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="53dp"
    android:layout_marginRight="53dp"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/xy_1"
            android:textColor="@color/color_333333"
            android:textSize="19sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="18dp"
                    android:lineSpacingExtra="13.5dp"
                    android:text="@string/xy_2"
                    android:textColor="@color/color_333333"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="13.5dp"
                    android:lineSpacingExtra="13.5dp"
                    android:text="@string/xy_3"
                    android:textColor="@color/color_333333"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="13.5dp"
                    android:lineSpacingExtra="13.5dp"
                    android:text="@string/xy_4"
                    android:textColor="@color/color_333333"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="13.5dp"
                    android:lineSpacingExtra="13.5dp"
                    android:text="@string/xy_5"
                    android:textColor="@color/color_333333"
                    android:textSize="12sp" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancelText"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/shape_f5f5f5_20_button_input"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/color_333333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/okText"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/shape_ffd100_20_button"
                android:gravity="center"
                android:text="@string/xy_6"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>