<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_theme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/centee_foot_1"
            android:textColor="@color/color_title_txt"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.0px"
            android:background="@color/line_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8.899994dip"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8.899994dip"
            android:text="@string/centee_foot_2"
            android:textColor="@color/color_content_txt"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.0px"
            android:background="@color/line_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/centee_foot_3"
            android:textColor="@color/color_title_txt"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.0px"
            android:layout_marginTop="10dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:paddingTop="22.199982dip">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:drawableTop="@drawable/vip_biaozhi"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/vip_biaozhi"
                    android:textColor="@color/color_content_txt"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/vip_group"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/vip_sixin"
                    android:textColor="@color/color_content_txt"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>